feat :tada: arizpe | adds routes and a type view

--- a/src/app/components/navBar/navBar.html
+++ b/src/app/components/navBar/navBar.html
@@ -3,7 +3,7 @@
     <mat-icon>favorite</mat-icon>
     <h1>Web App I4.0</h1> 
   </a>
-  <a matButton color="" href="/cards">Cards</a>
+  <a matButton color="" href="/type">Type</a>
   <a matButton href="/table">Table</a>
 
   <span class="spacer"></span>
@@ -13,3 +13,4 @@
     <span>Source Code</span>
   </a>
 </mat-toolbar>
+
