--- a/src/app/components/navBar/navBar.html
+++ b/src/app/components/navBar/navBar.html
@@ -3,8 +3,9 @@
     <mat-icon>favorite</mat-icon>
     <h1>Web App I4.0</h1> 
   </a>
-  <a matButton color="" href="/type">Type</a>
+  <a matButton href="/type">Type</a>
   <a matButton href="/table">Table</a>
+  <a matButton href="/products">Products</a>
 
   <span class="spacer"></span>
 
