--- a/src/app/views/products/products.view.html
+++ b/src/app/views/products/products.view.html
@@ -3,20 +3,20 @@
   <nav>
     <h1>Products</h1>
     <button (click)="openModal()">Add Product</button>
-    @if(isOpen()){
+    @if (isOpen()) {
       <article>
-        <form (submit)="createProduct($event)">
+        <form (submit)="createProductHandler($event)">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" placeholder="Enter product name" required />
+          <input type="text" id="name" name="name" placeholder="Enter product name" required/>
 
           <label for="description">Description:</label>
           <textarea id="description" name="description" placeholder="Enter product description" required></textarea>
 
           <label for="price">Price:</label>
-          <input type="number" id="price" name="price" step="0.01" placeholder="Enter product price" required />
+          <input type="number" id="price" name="price" step="0.01" placeholder="Enter product price" required/>
 
           <label for="image_url">Image URL:</label>
-          <input type="url" id="image_url" name="image_url" placeholder="Enter image URL" />
+          <input type="url" id="image_url" name="image_url" placeholder="Enter image URL"/>
 
           <button type="submit">Create Product</button>
           <button type="button" (click)="closeModal()">Cancel</button>
@@ -30,12 +30,12 @@
         <h2>{{ product.name }}</h2>
         <p>Price: {{ product.price }}</p>
         <p>Description: {{ product.description }}</p>
-      </div>
-    }
-
-    @if(this.error()){
-      <div class="error-message">
-        <p>{{ this.error() }}</p>
+        @if (product.image_url) {
+          <img src="{{ product.image_url }}" alt="{{ product.name }}"/>
+        }
+        @if(product.id_products) {
+          <button (click)="removeProductHandler(product.id_products)">Remove</button>
+        }
       </div>
     }
   </section>
